# value-rl

./: .gitmodules  CLAUDE.md  README.md  bench.py  bench_rollout.py  bench_rollout_vllm_mlx.py  grpo.py  gwen.py  gwen_metal.py  kernels.py  kvcache.py  load_weights.py  lora.py  model.py  pyproject.toml  rubric.py  test_correctness.py  tome_client.py  train.py  view_rollouts.py
data/: prompts.jsonl
knowledge/: ARCH.md  IMPROVEMENTS.md  ane-mlx-performance.md  correctness.md  garbage_rollout_investigation.md  gwen_metal.md  next-steps.md  overview.md  rubric.md  speedup.md  tome_integration.md
model/: gwen.py  load_weights.py  model.py
scripts/: scheduler.py  tui.py
src/rl_values/: cli.py
tests/: test_correctness.py  test_template.py  test_tome.py
