[project]
name = "rl-values"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "mlx>=0.30.6",
    "mlx-lm>=0.30.7",
    "textual>=0.47.0",
    "transformers>=5.2.0",
    "vllm-mlx",
]

[tool.uv.sources]
vllm-mlx = { git = "https://github.com/waybarrios/vllm-mlx.git" }

[tool.ruff]
line-length = 150
