[project]
name = "rl-values"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "flax>=0.12.3",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.4.1",
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.9",
    "jinja2>=3.1.6",
    "mlx>=0.30.6",
    "mlx-lm>=0.30.7",
    "safetensors>=0.7.0",
    "textual>=0.47.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "vllm-mlx",
]

[tool.uv]
package = false

[tool.uv.sources]
vllm-mlx = { git = "https://github.com/waybarrios/vllm-mlx.git" }
tome = { path = "Tome" }

[tool.ruff]
line-length = 150
